# TurtlebotProject2017

./: README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.projects/botty_mapping/com.python.pydev.analysis/: AdditionalProjectInterpreterInfo.pydevinfo
.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
.metadata/.plugins/org.python.pydev/v1_bm109oo8jsa5gnqmc06ekl12p/: modulesKeys
.metadata/.plugins/org.python.pydev/v1_bm109oo8jsa5gnqmc06ekl12p/shell/: __m_4zk3cnoobcl5is5emwkc9sm0p.inn  fre_1rpla7q6zf0tw8hhq8go27slo.inn  grp_167gocas4kzjjdb0gwxpbqf6x.top  gtk_6wlavflk636tpze8yeql2hkga.inn  mat_mx6a03amgez1jyxu54s5q9qf.top
botty_mapping/: .project  CMakeLists.txt  package.xml
botty_mapping/launch/: botty_mapping.launch
botty_mapping/scripts/: mapping.py
botty_navigation/: .project  CMakeLists.txt  package.xml
botty_navigation/launch/: map_navigation_mymap.launch  turtlebot_stage_mymap.launch  turtlebot_stage_mymap2.launch
botty_vision/: .project  CMakeLists.txt  package.xml
botty_vision/src/scripts/: vision.py
maps/: items_detected.txt
maps/mymap/: items_detected.txt  mymap.pgm  mymap.yaml
maps/stage/: mymap.world
(+4 files in other folders)
